--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,89 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.blue_box {
+  width: 940px;
+  height: 150px;
+  background-color: #4339f2;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.blue_box_images {
+  position: relative;
+  right: 50px;
+  bottom: 15px;
+}
+
+.blue_box_description {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.blue_box_img1 {
+  position: absolute;
+  width: 50px;
+  left: 40px;
+  z-index: 98;
+  top: -2px;
+  height: 8px;
+}
+
+.blue_box_img2 {
+  position: absolute;
+  bottom: 11px;
+  top: 0;
+  left: 20px;
+  right: 0;
+  margin: auto;
+  z-index: 97;
+}
+
+.blue_box_img3 {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  left: 50px;
+  z-index: 99;
+  top: -5px;
+}
+
+.blue_box_img4 {
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+
+.blue_box_button {
+  width: 140px;
+  height: 50px;
+  background-color: #ffffff;
+  color: #8a83f7;
+  outline: none;
+  border: none;
+  margin-top: 50px;
+  font-family: "DM Sans";
+  border-radius: 10px;
+}
+
+.blue_box_title {
+  font-family: "DM Sans";
+  color: #ffffff;
+  font-size: 22px;
+}
+
+.blue_box_paragraph {
+  font-family: "DM Sans";
+  color: #ffffff;
+  font-size: 14px;
 }
