--- a/css/main.css
+++ b/css/main.css
@@ -3,9 +3,15 @@
   padding: 0;
   box-sizing: border-box;
 }
+.wrapper{
+  background-color: #F2F2F2;
+}
 .left_menu {
-  width: 96px;
+  width: 7%;
   min-height: 100%;
+  background-color: white;
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
 }
 .left_menu-container {
   display: flex;
@@ -22,6 +28,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  color: gray;
 }
 .firstLogo {
   border-bottom: 1px solid rgba(0, 0, 0, 0.515);
