--- a/css/main.css
+++ b/css/main.css
@@ -2,4 +2,118 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    background-color: #F2F2F2;
+}
+
+div, span { background-color: inherit; }
+
+.wrapper .single_minded {
+    display: flex;
+    justify-content: space-around;
+}
+
+
+.wrapper .single_minded .profile_info {
+    width: 30%;
+    padding: 10px;
+    background-color: #FFFFFF !important;
+    border-radius: 10px;
+}
+
+.wrapper .single_minded .profile_info  .img {
+    width: 6vw;
+    height: 6vw;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+}
+.ava.profile_info > div.profile_image > div.img {
+    background-image: url('../img/profile-images/ava.svg'); 
+}
+.somon.profile_info > div.profile_image > div.img {
+    background-image: url('../img/profile-images/somon.svg'); 
+}
+.lilah.profile_info > div.profile_image > div.img {
+    background-image: url('../img/profile-images/liliah.svg'); 
+}
+
+
+.wrapper .single_minded .profile_info .profile_image {
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+
+.wrapper .single_minded .info {
+    display: flex;
+    flex-direction: column;
+    margin-left: 10px;
+}
+
+.wrapper .single_minded .dropdown {
+    position:absolute;
+    right: 0;
+    top: -10px;
+    font-size: 25px;
+    color: #bdb8b9;
+}
+.wrapper .single_minded .profile_info .name {
+    font-weight: 500;
+    font-size: 22px;
+}
+ 
+.wrapper .profile_info .loading_info{
+    display: flex;
+    justify-content: space-between;
+    padding-top: 10px;
+}
+
+.wrapper .profile_info .loader {
+    height: 10px;
+    width: 100%;
+    margin: 5px 0;
+    border-radius: 15px;
+}
+.ava.profile_info  div.loader { background-color: #E2FBD7;}
+.somon.profile_info  div.loader  {background-color: #FFE5D3}
+.lilah.profile_info  div.loader  {background-color: #DAD7FE}
+
+.wrapper .profile_info .loader .percent{
+    height: 10px;
+    border-radius: 15px;
+}
+
+.ava.profile_info  div.loader > div {background-color:#34B53A}
+
+.somon.profile_info  div.loader > div {background-color:#FF3A29}
+.lilah.profile_info  div.loader > div {background-color:#4339F2}
+
+.wrapper .profile_info .loading_container {font-size: 14px;}
+
+
+
+.loader > div {
+    animation-iteration-count: 1;
+    animation: mymove 6s;
+}
+
+.ava.profile_info > div:nth-child(2) > div.loader > div {width: 50%;}
+.ava.profile_info > div:nth-child(3) > div.loader > div{ width: 37%;}
+.ava.profile_info > div:nth-child(4) > div.loader > div{ width: 57%;}
+
+.somon.profile_info > div:nth-child(2) > div.loader > div { width: 32%;}
+.somon.profile_info > div:nth-child(3) > div.loader > div{ width: 54%;}
+.somon.profile_info > div:nth-child(4) > div.loader > div{ width: 47%;}
+
+.lilah.profile_info > div:nth-child(2) > div.loader > div { width: 57%;}
+.lilah.profile_info > div:nth-child(3) > div.loader > div{ width: 44%;}
+.lilah.profile_info > div:nth-child(4) > div.loader > div{ width: 34%;}
+
+.wrapper .loading_info .green {color: #34B53A;}
+.wrapper .loading_info .red {color: #FF3A29;}
+.wrapper .loading_info .purple {color: #4339F2;}
+
+
+@keyframes mymove {
+    from {opacity: 0;}
+    to {opacity: 1; }
 }
