--- a/css/main.css
+++ b/css/main.css
@@ -3,3 +3,38 @@
     padding: 0;
     box-sizing: border-box;
 }
+.wrapper_header {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 25px 35px;
+}
+.user_container {
+    position: relative;
+}
+.user_container > img {
+    margin-left: 10px;
+}
+.greenCircle {
+    position: absolute;
+    top: 30px;
+    right: 175px;
+}
+.searchLabel {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+}
+.wrapper_header-logo input {
+    margin-left: 10px;
+    padding: 5px;
+    border: none;
+}
+.plus {
+    position: absolute;
+    right: 14px;
+    top: 14px;
+}
+
