--- a/css/main.css
+++ b/css/main.css
@@ -3,3 +3,45 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.canvas-section{
+  display: flex;
+  flex-direction: space-around;
+  flex-wrap: wrap;
+}
+span#procent1 , span#procent2,span#procent3,span#procent4{
+display: block;
+position: absolute;
+left: 50%;
+top: 50%;
+font-size: 20px;
+transform: translate(-50%, -50%);
+color: #000;
+margin: 0;
+}
+
+span#procent1::after,
+span#procent2::after,
+span#procent3::after,
+span#procent4::after {
+content: '%';
+}
+
+.canvas-wrap {
+position: relative;
+width: 160px;
+height: 200px;
+border: 1px solid rgb(253, 251, 251);
+border-radius:14px;
+padding: 0;
+margin-right: 40px;
+margin-bottom: 20px;
+}
+
+.canvas-label{
+position: absolute;
+font-size:18px;
+font-weight: 500;
+top: 10%;
+left: 30%;  
+}
