--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,8 @@
 
 .wrapper{
   background-color: #F2F2F2;
+  width: 100%;
+  height: 100vh;
 }
 /* ========================================================================================Artashes Started */
 
